--- a/site/module3_solution..css
+++ b/site/module3_solution..css
@@ -4,7 +4,7 @@ body {
 		font-size: 16px;
 		color: #fff;
 	}
-	/**header**/
+	
 	#header-nav{
 		background-color: #f6b319;
 		border-radius: 0px;
@@ -14,6 +14,8 @@ body {
 	
 	.navbar-brand{
 		padding-top: 10px;
+		margin-top: 22px;
+		
 		}
 
      .navbar-brand h1{
@@ -121,12 +123,40 @@ h5{
 	
 }
 @media (min-width: 992px) and (max-width: 1199px){
+	.container {
+	border: 2px solid black;
+	background-position: center;
+	background-color: gray;
+	text-align: center;
+	margin-bottom: 40px;
+	margin-right: 20px;
+	margin-left: 20px;
+	padding: 10px;
+
+
+}
+
+
 
 
 
 
 	}
-	@media (min-width: 768px) and (max-width: 991px){
+	@media (min-width: 768px) and (max-width: 991px){ 
+		.container {
+	border: 2px solid black;
+	background-position: center;
+	background-color: gray;
+	text-align: center;
+	margin-bottom: 40px;
+	margin-right: 20px;
+	margin-left: 20px;
+	padding: 10px;
+
+
+}
+
+}
 		  
          
 	@media (max-width: 767px) {
@@ -141,9 +171,20 @@ h5{
 			padding-top: 5px;
 			font-size: 16px;
 }
-.navbar-brand p img{
-	height: 20px;
+.container {
+	border: 2px solid black;
+	background-position: center;
+	background-color: gray;
+	text-align: center;
+	margin-bottom: 40px;
+	margin-right: 20px;
+	margin-left: 20px;
+	padding: 10px;
+
+
 }
+
+
 #collapsable-nav a{
 	font-size: 1em;
 
