--- a/site/styles.css
+++ b/site/styles.css
@@ -132,7 +132,7 @@ body {
   box-shadow: 0 1px 5px 1px #cccccc;
 }
 #menu-tile {
-  background: url('../site/menu-tile.jpg') no-repeat;
+  background: url('site/menu-tile.jpg') no-repeat;
   background-position: center;
 }
 #specials-tile {
