--- a/site/styles.css
+++ b/site/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 #logo-img {
-  background: url('site/restaurant-logo.png') no-repeat;
+  background: url('https://github.com/rishika37/cousera-assignment/edit/master/site/restaurant-logo.png') no-repeat;
   width: 150px;
   height: 150px;
   margin: 10px 15px 10px 0;
@@ -233,7 +233,7 @@ h3.menu-item-title {
 /********** Large devices only **********/
 @media (min-width: 1200px) {
   .container .jumbotron {
-    background: url('site/jumbotron_1200.jpg') no-repeat;
+    background: url('https://github.com/rishika37/cousera-assignment/edit/master/site/jumbotron_1200.jpg') no-repeat;
     height: 675px;
   }
 }
@@ -242,7 +242,7 @@ h3.menu-item-title {
 @media (min-width: 992px) and (max-width: 1199px) {
   /* Header */
   #logo-img {
-    background: url('site/restaurant-logo_medium.png') no-repeat;
+    background: url('https://github.com/rishika37/cousera-assignment/edit/master/site/restaurant-logo_medium.png') no-repeat;
     width: 100px;
     height: 100px;
     margin: 5px 5px 5px 0;
@@ -251,7 +251,7 @@ h3.menu-item-title {
 
   /* Home Page */
   .container .jumbotron {
-    background: url('site/jumbotron_992.jpg') no-repeat;
+    background: url('https://github.com/rishika37/cousera-assignment/site/jumbotron_992.jpg') no-repeat;
     height: 558px;
   }
   /* End Home Page */
